[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/StarSparkle.png" type="Texture" id=1]
[ext_resource path="res://Player/StarSparkleParticle.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.9375, 0.930405, 0.483398, 1, 0.886719, 0.561127, 0.835845, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
min_value = 0.8
_data = [ Vector2( 0, 0.7035 ), 0.0, 0.0, 0, 0, Vector2( 0.984712, 0.7035 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
trail_divisor = 2
trail_size_modifier = SubResource( 4 )
emission_shape = 2
emission_box_extents = Vector3( 10, 10, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -10, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )
hue_variation = 0.01
hue_variation_random = 0.1

[node name="StarSparkle" type="Particles2D"]
z_index = 1
amount = 2
lifetime = 0.4
preprocess = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
process_mode = 0

[node name="SpawnNew" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="SpawnNew" to="." method="_on_SpawnNew_timeout"]
